# MSA

./: Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: CNAME  manifest.json
docs/catalog/MSA-Catalog/: msa-catalog.json
docs/meta/series/: msa-000100010001.json  msa-0010101.json
docs/stream/series/: msa-000100010001.json  msa-000100010002.json  msa-000100010003.json  msa-000100010004.json  msa-000100010007.json  msa-000100010009.json  msa-0010101.json  msa-0010102.json  msa-0010103.json  msa-0010104.json  msa-0010105.json  msa-0010106.json  msa-0010107.json  msa-0010108.json  msa-0010109.json
src/: build.rs  generate.rs  main.rs  serve.rs
