[package]
name = "my-stremio-addon"
version = "1.1.2"
edition = "2021"

[[bin]]
name = "generate"
path = "src/generate.rs"

[[bin]]
name = "serve"
path = "src/serve.rs"

[dependencies]
actix-web = "4.8"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
stremio-core = { git = "https://github.com/Stremio/stremio-core.git" }
url = "2.5"
serde_json = "1.0"
